--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "53-accounting-rtk-ts",
+  "name": "53-hw-accounting-rtk-ts",
   "private": true,
   "version": "0.0.0",
   "type": "module",
